10-sre-and-reliability/07-kubernetes-chaos-mesh-fault-injection/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chaos-lab
  labels:
    app.kubernetes.io/part-of: chaos-mesh-demo
    environment: testing
    chaos-mesh.org/inject: "true"
