10-sre-and-reliability/07-kubernetes-chaos-mesh-fault-injection/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: chaos-lab
  labels:
    app: payment-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    app: payment-api
